[package]
name = "belog"
version = "0.1.0"
keywords = ["log", "logging", "logging"]
authors = ["Justus K. <justus.k@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A minimal and pretty log impplementation for the log crate."
homepage = "https://github.com/Stupremee/belog"
repository = "https://github.com/Stupremee/belog"
documentation = "https://docs.rs/belog"

[dependencies]
log = { version = "0.4.8", features = ["std"] }
colored = { version = "1.9.0", optional = true }

[dev-dependencies]
belog = { path = "./", features = ["colored"] }
